ch05/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: baidu-endpoints
subsets:
  - addresses:
      - ip: 220.181.38.148 # baidu.com
      - ip: 39.156.69.79
    ports:
      - port: 80
