ch05/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  baidu-endpoints
spec:
  ports:
    - port: 80
